package edu.fiuba.algo3.modelo.tarjetaPais;

import edu.fiuba.algo3.modelo.Jugador;


public class Activada implements EstadoTarjetaPais{

    public void activar(TarjetaPais tarjeta, Jugador jugador) {
    }



}
