package edu.fiuba.algo3.modelo.tarjetaPais;

public class Comodin implements Simbolo {

    public boolean esElMismoSimbolo(Simbolo simbolo) {
        return true;
    }
    public boolean sonSimbolosDiferentes(Simbolo simbolo){
        return true;
    }
    public boolean esElMismoSimbolo(String nombreSimbolo) {
        return true;
    }
    public boolean sonSimbolosDiferentes(String nombreSimbolo) {
        return true;
    }


}
